== Changes between Counterclockwise 0.25.2 and 0.26.0

`0.26.0` released on May xx, 2014

=== Enhancements

==== New Clojure Wizard

The wizard now accepts `lein new` template arguments. Simply put them after the template name.

==== REPL

- Adds preferences for REPL history - Contributed by Gunnar Völkel
  - Preference for REPL history size.
  - Preference for REPL history persistence schedule. 

=== Bug fixes

- `New Clojure namespace` wizard now works with fully qualified namespaces, pre-fills the input text with the currently selected package name and creates missing packages on the fly. Fix Issue #468
- `New Clojure namespace` wizard now accepts file starting with numbers. Fix Issue #466
- Correct indenting of new threading macros, as-> cond-> some->. Fix Issue #554
- `F3 Navigate to Definition` was not working for single segment namespaces. Fix Issue #572 (Thanks isto.nikula for the patch!)
- Upgraded missing dependency on `ccw.server 0.1.1` which is where the fix for Code Completion not succeeding sometimes is located!
- `REPL View`: Better handling of cursor movement in output area of REPL. Fix Issue #529
  - You can use arrow keys, copy keys in the REPL output area
  - You can use Tab key to switch to the REPL input area
- `REPL View` accepts the Drawbridge protocol, thus allowing `http(s)://<server>:<port>/repl` or `http(s)://<user>:<password>@<server>:<port>/repl` URLs. Fix Issue #501
- `REPL View` does not open and give proper error message if connection is not possible (e.g. Drawbridge HTTP 401)
- `Outline View`: There were unexpected exceptions thrown depending on the content of the Editor. These were due to `java.lang.Comparator` contract violations. Fix Issue #639
- `Editor`: In strict/paredit mode, forward/backward delete do not prevent to remove `#` in front of `()` or `{}` or `""`. Also, fixed a bug where forward delete allowed to remove `(` or `{` or `"` if there was a leading `#`. Fix Issue #523 