@@ -5,3 +5,4 @@
 /workspace
 .DS_Store
 ccw.repl.cmdhistory.prefs
+.nrepl
